# pytntp

./: LICENSE.txt  README.md  example.py  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
docs/: getting-started.md  index.md  zone-splitting.md
docs/reference/: convert.md  index.md  read.md  transform.md  vis.md
src/: tntp.py
src/tntp/: __init__.py  convert.py  read.py  transform.py  vis.py
